syntax = "proto2";

package com.ilmservice.personalbudget;

option java_package = "com.ilmservice.personalbudget.protobufs";

import "Data.proto";

message TransactionList {
  optional PageInfo pageInfo = 1;
  repeated Filter filters = 2;
  repeated Transaction transactions = 3;
}

message PageInfo {
  optional uint32 currentPage = 1 [default = 1];
  optional uint32 pageCount = 2;
  optional uint32 resultsPerPage = 3 [default = 10];
}

message Filter {
  oneof filter_type {
     DateRangeFilter dateRangeFilter = 1;
  }
}

message DateRangeFilter {
  optional int64 start = 1;
  optional int64 end = 2;
}


